[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/objects/pickable_items/equipment/_equipment_item.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/pickable_items/equipment/melee/melee_item.gd" type="Script" id=2]
[ext_resource path="res://resources/sounds/melee/blade/parry/536104__eminyildirim__sword-hit-heavy.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/sounds/melee/blade/attack/525182__sophia-c__longsword-swing-2-poor-edge-alignment.wav" type="AudioStream" id=4]
[ext_resource path="res://resources/sounds/melee/blade/attack/525166__sophia-c__longsword-swing-1-good-edge-alignment.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/sounds/impacts/522400__filmmakersmanual__bullet-concrete-hit-1.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/sounds/melee/blade/slash_flesh/420674__sypherzent__deep-cut-slash-gash.wav" type="AudioStream" id=7]

[node name="MeleeItem" instance=ExtResource( 1 )]
collision_layer = 64
collision_mask = 1
mass = 1.0
script = ExtResource( 2 )
item_name = "Melee Item"
weapon_type = 0
melee_damage = 0
cooldown = 0.01
throw_logic = true
can_spin = false
normal_pos_path = NodePath("NormalPosition")
throw_pos_path = NodePath("ThrowPosition")
melee_damage_type = 0

[node name="ReloadTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="RayCast" type="RayCast" parent="." index="4"]
cast_to = Vector3( 0, 0, -1000 )
collision_mask = 13
collide_with_areas = true

[node name="NormalPosition" type="Position3D" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )

[node name="ThrowPosition" type="Position3D" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.423551, 0 )

[node name="Sounds" type="Spatial" parent="." index="8"]

[node name="Unsheath" type="AudioStreamPlayer3D" parent="Sounds" index="0"]

[node name="Sheath" type="AudioStreamPlayer3D" parent="Sounds" index="1"]

[node name="Thrust" type="AudioStreamPlayer3D" parent="Sounds" index="2"]
stream = ExtResource( 5 )

[node name="Cut" type="AudioStreamPlayer3D" parent="Sounds" index="3"]
stream = ExtResource( 4 )

[node name="Parry" type="AudioStreamPlayer3D" parent="Sounds" index="4"]
stream = ExtResource( 3 )

[node name="FleshThrust" type="AudioStreamPlayer3D" parent="Sounds" index="5"]
stream = ExtResource( 6 )

[node name="FleshCut" type="AudioStreamPlayer3D" parent="Sounds" index="6"]
stream = ExtResource( 7 )

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
